--- a/styles/style.css
+++ b/styles/style.css
@@ -13,12 +13,11 @@ html {
 body {
   overflow: hidden;
   font-family: "Kumbh Sans", sans-serif;
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(180deg, #b068e9 0%, #6463e7 50%, #f0a1a8 100%);
   background-size: cover;
   background-repeat: no-repeat;
-  animation: changeColor 20s infinite alternate;
+  animation: changeColor 5s infinite alternate;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -26,27 +25,74 @@ body {
 
 @keyframes changeColor {
   0% {
-    background-position: 0% 0%;
+    background: linear-gradient(180deg, #b068e9 0%, #6463e7 50%, #f0a1a8 100%);
+  }
+  25% {
+    background: linear-gradient(180deg, #aa63e4 0%, #5c5ce6 50%, #eb757f 100%);
+  }
+  50% {
+    background: linear-gradient(180deg, #9357c4 0%, #5a5ace 50%, #f06470 100%);
+  }
+  75% {
+    background: linear-gradient(180deg, #aa57ee 0%, #5858e4 50%, #ec6d77 100%);
   }
   100% {
-    background-position: 100% 100%;
+    background: linear-gradient(180deg, #9638e4 0%, #5e5edb 50%, #f74958 100%);
   }
 }
 
+.desktop {
+  display: none;
+}
+
+.dek {
+  display: none;
+}
+
+.box {
+  display: none;
+}
+
+/*
+   Mobile Version 
+*/
+
+/*
+  ========================================
+    Header 
+  ========================================
+*/
+
 .container {
   width: 32.7rem;
-  height: 53.3rem;
+  height: 53.5rem;
   background-color: white;
   border-radius: 2.3rem;
   box-shadow: 0px 50px 50px -20px rgba(53, 18, 122, 0.5);
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.photos {
+  margin-bottom: 2.8rem;
+  position: relative;
+}
+
+.mob {
+  width: 24rem;
+  position: absolute;
+  top: 10px;
+}
+
+.mb {
+  width: 24rem;
+  position: absolute;
+  top: 5px;
 }
 
 .title {
   font-size: 32px;
   font-weight: 700;
   color: rgba(30, 31, 54, 1);
+  text-align: center;
 }
